--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,5 +1,11 @@
- spring.jpa.hibernate.ddl-auto=update
- spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false&serverTimezone=UTC
+ 
+ spring.datasource.url=jdbc:mysql://localhost:3306/portafolioap2?useSSL=false&serverTimezone=UTC
  spring.datasource.username=root
  spring.datasource.password=511213fld
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+ spring.jpa.hibernate.ddl-auto=update
+
+
+
+jwt.secret = secret
+jwt.expiration = 3600
